chore: consolidate docs and optimize project

--- a/blog.html
+++ b/blog.html
@@ -129,7 +129,7 @@
                         Discover how innovative teaching methods are transforming classrooms and empowering students to
                         reach their full potential.
                     </p>
-                    <a href="blog-details.html" class="btn btn--primary mt-4">Read Article</a>
+                    <a href="blog/second-article.html" class="btn btn--primary mt-4">Read Article</a>
                 </div>
             </section>
 
@@ -141,15 +141,15 @@
                         <article class="card card--image-top card--image-top--compact">
                             <img
                                 loading="lazy"
-                                src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?w=800&h=600&fit=crop"
-                                alt="Collaborative learning"
+                                src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?w=800&h=600&fit=crop"
+                                alt="Parent and child learning together with a tablet"
                             >
                             <div class="card__body">
-                                <h4>Collaborative Learning</h4>
-                                <p class="text-sm">Exploring the benefits of group-based education.</p>
+                                <h4>The Future of Education</h4>
+                                <p class="text-sm">How Pearson’s MePro Parents app aligns home support with classroom goals.</p>
                             </div>
                             <div class="card__footer">
-                                <a href="blog-details.html" class="btn btn--sm btn--outline">Read More</a>
+                                <a href="blog/second-article.html" class="btn btn--sm btn--outline">Read More</a>
                             </div>
                         </article>
                     </div>
