--- a/demo/overview.html
+++ b/demo/overview.html
@@ -18,6 +18,7 @@
     <!-- Unified Responsive Framework -->
     <link rel="stylesheet" href="../assets/css/framework-unified.css">
     <link rel="stylesheet" href="../assets/css/typography-system.css">
+    <link rel="stylesheet" href="../assets/css/demo.css">
     
 <style>
             .demo-section {
@@ -127,44 +128,10 @@
             body[data-theme="dark"] .stat-counter__value {
                 color: var(--color-primary);
             }
-            .demo-nav {
-        display: flex;
-        flex-wrap: wrap;
-        gap: var(--space-2);
-        justify-content: center;
-        margin: var(--space-4) auto var(--space-6);
-    }
-    .demo-nav__link {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        padding: var(--space-1) var(--space-2);
-        border: 1px solid var(--color-border);
-        border-radius: var(--border-radius);
-        background: var(--color-surface);
-        color: var(--color-text);
-        text-decoration: none;
-        font-size: var(--font-size-xs);
-        font-weight: 600;
-        letter-spacing: 0.02em;
-        transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
-    }
-    .demo-nav__link:hover,
-    .demo-nav__link:focus-visible {
-        background: var(--color-primary);
-        color: var(--color-primary-contrast);
-        border-color: var(--color-primary);
-    }
-    .demo-nav__link.is-active {
-        background: var(--color-primary);
-        color: var(--color-primary-contrast);
-        border-color: var(--color-primary);
-        box-shadow: var(--shadow-xs);
-    }
 
 </style>
 </head>
-<body data-theme="dark">
+<body class="demo-body" data-theme="dark">
     <!-- Page Load Spinner -->
     <div class="page-spinner">
         <div class="page-spinner__content">
@@ -174,21 +141,50 @@
     </div>
 
 <a href="#main-content" class="skip-link">Skip to main content</a>
-        <nav class="demo-nav">
-        <a class="demo-nav__link is-active" href="overview.html" aria-current="page">Overview</a>
-        <a class="demo-nav__link" href="components.html">Components</a>
-        <a class="demo-nav__link" href="cards.html">Cards</a>
-        <a class="demo-nav__link" href="tokens.html">Tokens</a>
-        <a class="demo-nav__link" href="layout.html">Layout</a>
-        <a class="demo-nav__link" href="accessibility.html">Accessibility</a>
-        <a class="demo-nav__link" href="typography.html">Typography</a>
-        <a class="demo-nav__link" href="icons.html">Icons</a>
-        <a class="demo-nav__link" href="utilities.html">Utilities</a>
-        <a class="demo-nav__link" href="photos.html">Photos</a>
-        <a class="demo-nav__link" href="light-theme.html">Light Theme</a>
-        <a class="demo-nav__link" href="dark-theme.html">Dark Theme</a>
-    </nav>
-        <main id="main-content">
+    <header class="demo-toolbar" role="banner">
+        <div class="demo-toolbar__inner container">
+            <div class="demo-toolbar__brand">
+                <a class="demo-toolbar__title" href="overview.html">Framework Demo</a>
+                <div class="demo-toolbar__meta" aria-label="Current section">
+                    <span>Showcase overview</span>
+                    <span class="demo-toolbar__meta-dot" aria-hidden="true"></span>
+                    <span>Start here</span>
+                </div>
+            </div>
+            <nav class="demo-toolbar__nav demo-scroll-shadow" aria-label="Component index">
+                <ul class="demo-toolbar__list">
+                    <li><a class="demo-toolbar__link" href="overview.html" aria-current="page">Overview</a></li>
+                    <li><a class="demo-toolbar__link" href="components.html">Components</a></li>
+                    <li><a class="demo-toolbar__link" href="cards.html">Cards</a></li>
+                    <li><a class="demo-toolbar__link" href="tokens.html">Tokens</a></li>
+                    <li><a class="demo-toolbar__link" href="layout.html">Layout</a></li>
+                    <li><a class="demo-toolbar__link" href="forms.html">Forms</a></li>
+                    <li><a class="demo-toolbar__link" href="navigation.html">Navigation</a></li>
+                    <li><a class="demo-toolbar__link" href="utilities.html">Utilities</a></li>
+                    <li><a class="demo-toolbar__link" href="typography.html">Typography</a></li>
+                    <li><a class="demo-toolbar__link" href="icons.html">Icons</a></li>
+                    <li><a class="demo-toolbar__link" href="accessibility.html">Accessibility</a></li>
+                    <li><a class="demo-toolbar__link" href="photos.html">Photos</a></li>
+                    <li><a class="demo-toolbar__link" href="light-theme.html">Light Theme</a></li>
+                    <li><a class="demo-toolbar__link" href="dark-theme.html">Dark Theme</a></li>
+                    <li><a class="demo-toolbar__link" href="../index.html">Marketing Site</a></li>
+                </ul>
+            </nav>
+            <div class="demo-toolbar__controls">
+                <div class="demo-toolbar__theme">
+                    <button class="theme-toggle" type="button" aria-label="Toggle color theme" title="Toggle theme">
+                        <span class="theme-toggle__icon theme-toggle__icon--light">
+                            <img src="../assets/icons/sun.svg" alt="Light theme" width="24" height="24">
+                        </span>
+                        <span class="theme-toggle__icon theme-toggle__icon--dark">
+                            <img src="../assets/icons/moon.svg" alt="Dark theme" width="24" height="24">
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main id="main-content" class="demo-main">
         <div class="container py-8">
 
             <section class="demo-section">
@@ -202,7 +198,7 @@
                             <div class="card__body">
                                 <h4>Components</h4>
                                 <p>Buttons, forms, alerts, badges, and interactive elements with all states demonstrated.</p>
-                                <a href="#tab-components" class="btn btn--primary btn--sm" onclick="switchTab('components'); return false;">View Components</a>
+                                <a href="components.html" class="btn btn--primary btn--sm">View Components</a>
                             </div>
                         </article>
                     </div>
@@ -211,7 +207,7 @@
                             <div class="card__body">
                                 <h4>Cards</h4>
                                 <p>All card variants including glass morphism, image cards, and horizontal layouts.</p>
-                                <a href="#tab-cards" class="btn btn--primary btn--sm" onclick="switchTab('cards'); return false;">View Cards</a>
+                                <a href="cards.html" class="btn btn--primary btn--sm">View Cards</a>
                             </div>
                         </article>
                     </div>
@@ -220,14 +216,31 @@
                             <div class="card__body">
                                 <h4>Design Tokens</h4>
                                 <p>Colors, typography, spacing, borders, and shadows - the foundation of the design system.</p>
-                                <a href="#tab-tokens" class="btn btn--primary btn--sm" onclick="switchTab('tokens'); return false;">View Tokens</a>
+                                <a href="tokens.html" class="btn btn--primary btn--sm">View Tokens</a>
                             </div>
                         </article>
-                    
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
-<script src="../assets/js/utils.js"></script>
+    <script src="../assets/js/utils.js"></script>
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/components.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const nav = window.safeQuery?.('.demo-scroll-shadow')
+            if (!nav) return
+
+            const updateOverflowState = () => {
+                const isOverflowing = nav.scrollWidth > nav.clientWidth + 4
+                nav.classList.toggle('is-scrollable', isOverflowing)
+            }
+
+            updateOverflowState()
+            nav.addEventListener('scroll', updateOverflowState, { passive: true })
+            window.addEventListener('resize', updateOverflowState)
+        })
+    </script>
 </body>
 </html>
