--- a/about.html
+++ b/about.html
@@ -119,13 +119,13 @@
                 <div class="grid">
                     <div class="col-12 col-md-8">
                         <h2>Our Mission</h2>
-                        <p>Provide a brief paragraph about your school's mission, values, or any special programmes you offer. This section can be expanded with more detailed information about your educational philosophy, history, and goals.</p>
+                        <p>Provide a brief paragraph about your organization's mission, values, or any special programmes you offer. This section can be expanded with more detailed information about your educational philosophy, history, and goals.</p>
 
                         <h3 class="mt-6">Our Values</h3>
-                        <p>Describe the core values that guide your school's approach to education. What principles do you stand for? How do these values shape the learning experience for your students?</p>
+                        <p>Describe the core values that guide your organization's approach to education. What principles do you stand for? How do these values shape the learning experience for your students?</p>
 
                         <h3 class="mt-6">Our History</h3>
-                        <p>Share the story of your school. When was it founded? What milestones have you achieved? How has your school evolved over the years?</p>
+                        <p>Share the story of your organization. When was it founded? What milestones have you achieved? How has it evolved over the years?</p>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="card card--solid">
