--- a/demo/icons.html
+++ b/demo/icons.html
@@ -18,153 +18,9 @@
     <!-- Unified Responsive Framework -->
     <link rel="stylesheet" href="../assets/css/framework-unified.css">
     <link rel="stylesheet" href="../assets/css/typography-system.css">
-    
-<style>
-            .demo-section {
-                padding: var(--space-8) 0;
-                border-bottom: 1px solid var(--color-border);
-            }
-            .demo-section:last-child {
-                border-bottom: none;
-            }
-            .demo-section h2 {
-                margin-top: 0;
-                margin-bottom: var(--space-6);
-                padding-bottom: var(--space-4);
-                border-bottom: 2px solid var(--color-border);
-            }
-            .demo-item {
-                margin-bottom: var(--space-6);
-            }
-            .demo-item:last-child {
-                margin-bottom: 0;
-            }
-            .demo-label {
-                font-size: var(--font-size-xs);
-                font-weight: 600;
-                text-transform: uppercase;
-                letter-spacing: 0.05em;
-                color: var(--color-text-muted);
-                margin-bottom: var(--space-2);
-            }
-            .color-swatch {
-                width: 100%;
-                height: 80px;
-                border-radius: var(--border-radius);
-                border: 2px solid var(--color-border);
-                margin-bottom: var(--space-2);
-            }
-            .icon-grid {
-                display: grid;
-                grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-                gap: var(--space-4);
-            }
-            .icon-item {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                padding: var(--space-3);
-                border: 1px solid var(--color-border);
-                border-radius: var(--border-radius);
-                text-align: center;
-            }
-            .icon-item img {
-                width: 32px;
-                height: 32px;
-                margin-bottom: var(--space-2);
-                transition:
-                    filter 0.2s ease,
-                    opacity 0.2s ease;
-            }
-            /* Theme-aware icon colors - make SVG icons visible in both themes */
-            /* Light theme: icons should be dark */
-            body[data-theme="light"] .icon-item img {
-                filter: brightness(0) saturate(100%);
-                opacity: 0.9;
-            }
-            /* Dark theme: icons should be light */
-            body[data-theme="dark"] .icon-item img {
-                filter: brightness(0) saturate(100%) invert(1);
-                opacity: 0.95;
-            }
-            /* Photo Stats Counter - Inspired by Cursor Settings */
-            .stat-counter {
-                text-align: center;
-                padding: var(--space-4);
-            }
-            .stat-counter__value {
-                font-size: clamp(2rem, 4vw, 3.5rem);
-                font-weight: 600;
-                font-family: var(--font-family-heading);
-                color: var(--color-primary);
-                line-height: 1.2;
-                margin-bottom: var(--space-2);
-                transition: transform 0.2s ease;
-            }
-            .stat-counter__label {
-                font-size: var(--font-size-base);
-                font-weight: 600;
-                color: var(--color-text);
-                margin-bottom: var(--space-1);
-            }
-            .stat-counter__subtitle {
-                font-size: var(--font-size-sm);
-                color: var(--color-text-muted);
-            }
-            .photo-item {
-                cursor: pointer;
-                transition:
-                    transform 0.2s ease,
-                    box-shadow 0.2s ease;
-            }
-            .photo-item:hover {
-                transform: translateY(-4px);
-                box-shadow: var(--shadow-md);
-            }
-            .photo-item:hover img {
-                transform: scale(1.05);
-            }
-            body[data-theme="dark"] .stat-counter__value {
-                color: var(--color-primary);
-            }
-            .demo-nav {
-        display: flex;
-        flex-wrap: wrap;
-        gap: var(--space-2);
-        justify-content: center;
-        margin: var(--space-4) auto var(--space-6);
-    }
-    .demo-nav__link {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        padding: var(--space-1) var(--space-2);
-        border: 1px solid var(--color-border);
-        border-radius: var(--border-radius);
-        background: var(--color-surface);
-        color: var(--color-text);
-        text-decoration: none;
-        font-size: var(--font-size-xs);
-        font-weight: 600;
-        letter-spacing: 0.02em;
-        transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
-    }
-    .demo-nav__link:hover,
-    .demo-nav__link:focus-visible {
-        background: var(--color-primary);
-        color: var(--color-primary-contrast);
-        border-color: var(--color-primary);
-    }
-    .demo-nav__link.is-active {
-        background: var(--color-primary);
-        color: var(--color-primary-contrast);
-        border-color: var(--color-primary);
-        box-shadow: var(--shadow-xs);
-    }
-
-</style>
+    <link rel="stylesheet" href="../assets/css/demo.css">
 </head>
-<body data-theme="dark">
+<body class="demo-body" data-theme="dark">
     <!-- Page Load Spinner -->
     <div class="page-spinner">
         <div class="page-spinner__content">
@@ -174,21 +30,50 @@
     </div>
 
 <a href="#main-content" class="skip-link">Skip to main content</a>
-        <nav class="demo-nav">
-        <a class="demo-nav__link" href="overview.html">Overview</a>
-        <a class="demo-nav__link" href="components.html">Components</a>
-        <a class="demo-nav__link" href="cards.html">Cards</a>
-        <a class="demo-nav__link" href="tokens.html">Tokens</a>
-        <a class="demo-nav__link" href="layout.html">Layout</a>
-        <a class="demo-nav__link" href="accessibility.html">Accessibility</a>
-        <a class="demo-nav__link" href="typography.html">Typography</a>
-        <a class="demo-nav__link is-active" href="icons.html" aria-current="page">Icons</a>
-        <a class="demo-nav__link" href="utilities.html">Utilities</a>
-        <a class="demo-nav__link" href="photos.html">Photos</a>
-        <a class="demo-nav__link" href="light-theme.html">Light Theme</a>
-        <a class="demo-nav__link" href="dark-theme.html">Dark Theme</a>
-    </nav>
-        <main id="main-content">
+    <header class="demo-toolbar" role="banner">
+        <div class="demo-toolbar__inner container">
+            <div class="demo-toolbar__brand">
+                <a class="demo-toolbar__title" href="overview.html">Framework Demo</a>
+                <div class="demo-toolbar__meta" aria-label="Current section">
+                    <span>Icon library</span>
+                    <span class="demo-toolbar__meta-dot" aria-hidden="true"></span>
+                    <span>SVG tokens</span>
+                </div>
+            </div>
+            <nav class="demo-toolbar__nav demo-scroll-shadow" aria-label="Component index">
+                <ul class="demo-toolbar__list">
+                    <li><a class="demo-toolbar__link" href="overview.html">Overview</a></li>
+                    <li><a class="demo-toolbar__link" href="components.html">Components</a></li>
+                    <li><a class="demo-toolbar__link" href="cards.html">Cards</a></li>
+                    <li><a class="demo-toolbar__link" href="tokens.html">Tokens</a></li>
+                    <li><a class="demo-toolbar__link" href="layout.html">Layout</a></li>
+                    <li><a class="demo-toolbar__link" href="forms.html">Forms</a></li>
+                    <li><a class="demo-toolbar__link" href="navigation.html">Navigation</a></li>
+                    <li><a class="demo-toolbar__link" href="utilities.html">Utilities</a></li>
+                    <li><a class="demo-toolbar__link" href="typography.html">Typography</a></li>
+                    <li><a class="demo-toolbar__link" href="icons.html" aria-current="page">Icons</a></li>
+                    <li><a class="demo-toolbar__link" href="accessibility.html">Accessibility</a></li>
+                    <li><a class="demo-toolbar__link" href="photos.html">Photos</a></li>
+                    <li><a class="demo-toolbar__link" href="light-theme.html">Light Theme</a></li>
+                    <li><a class="demo-toolbar__link" href="dark-theme.html">Dark Theme</a></li>
+                    <li><a class="demo-toolbar__link" href="../index.html">Marketing Site</a></li>
+                </ul>
+            </nav>
+            <div class="demo-toolbar__controls">
+                <div class="demo-toolbar__theme">
+                    <button class="theme-toggle" type="button" aria-label="Toggle color theme" title="Toggle theme">
+                        <span class="theme-toggle__icon theme-toggle__icon--light">
+                            <img src="../assets/icons/sun.svg" alt="Light theme" width="24" height="24">
+                        </span>
+                        <span class="theme-toggle__icon theme-toggle__icon--dark">
+                            <img src="../assets/icons/moon.svg" alt="Dark theme" width="24" height="24">
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main id="main-content" class="demo-main">
         <div class="container py-8">
 
             <section class="demo-section">
@@ -204,5 +89,20 @@
 <script src="../assets/js/utils.js"></script>
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/components.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const nav = window.safeQuery?.('.demo-scroll-shadow')
+            if (!nav) return
+
+            const updateOverflowState = () => {
+                const isOverflowing = nav.scrollWidth > nav.clientWidth + 4
+                nav.classList.toggle('is-scrollable', isOverflowing)
+            }
+
+            updateOverflowState()
+            nav.addEventListener('scroll', updateOverflowState, { passive: true })
+            window.addEventListener('resize', updateOverflowState)
+        })
+    </script>
 </body>
 </html>
