--- a/about.html
+++ b/about.html
@@ -280,6 +280,7 @@
 
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/components.js"></script>
 </body>
 </html>
 
