--- a/contact.html
+++ b/contact.html
@@ -224,5 +224,6 @@
 
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/components.js"></script>
 </body>
 </html>
