--- a/index.html
+++ b/index.html
@@ -319,5 +319,6 @@
 
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/components.js"></script>
 </body>
 </html>
