--- a/solutions.html
+++ b/solutions.html
@@ -251,5 +251,6 @@
 
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/components.js"></script>
 </body>
 </html>
